--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
           <div class="rememberMe">
             <table class="remForg">
               <tr>
-                <td class="leftInfo"><input class="shekBox" type="checkbox" name="" value=""> Remember me</td>
+                <td class="leftInfo">
+                  <label> 
+                  <input class="shekBox" type="checkbox" name="" value=""> Remember me
+                  </label> 
+                </td>
                 <td class="forgetPass">
                   <a id="forget" href="forgetPass.html" target="_blank">  Forget password? </a>
                 </td>
